<resources>
    <string name="app_name">MusicalApp</string>
    <string name="author">Author</string>
    <string name="song_name">Song name</string>
    <string name="cover_image">Cover image</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="song_activity">List</string>
    <string name="artist1">Artist1</string>
    <string name="artist2">Artist2</string>
    <string name="artist3">Artist3</string>
    <string name="artist5">Artist5</string>
    <string name="artist6">Artist6</string>
    <string name="song1">Song1</string>
    <string name="song2">Song2</string>
    <string name="song4">Song4</string>
    <string name="song3">Song3</string>
    <string name="song5">Song5</string>
    <string name="song12">Song12</string>
    <string name="song17">Song17</string>
    <string name="playlist_1">Playlist 1</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="back_button">Back button</string>
</resources>
