<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/song_info_style"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.8">

            <TextView
                android:id="@+id/author"
                style="@style/author_name_style"
                android:text="@string/author" />

            <TextView
                android:id="@+id/song_name"
                style="@style/song_name_style"
                android:text="@string/song_name" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cover_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/generic" />

        <ImageButton
            android:id="@+id/button"
            style="@style/music_button_style"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/button2"
            style="@style/music_button_style"
            android:button="@drawable/check"
            android:contentDescription="@string/play"
            android:text=""
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <ImageButton
            android:id="@+id/button3"
            style="@style/music_button_style"
            android:contentDescription="@string/next"
            android:src="@drawable/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>