<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover_image"
            android:contentDescription="@string/cover_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/song_item_cover_style" />

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/cover_image"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/song_item_info_style">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>